--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: php
-
+dist: trusty
 # list any PHP version you want to test against
 php:
   # using major version aliases
@@ -17,4 +17,3 @@ php:
   # aliased to a recent 7.x version
   - 7.0
   # aliased to a recent hhvm version
-  dist: precise
